<resources>
    <string name="app_name">E-Build</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="map_normal">Normal</string>
    <string name="map_satelite">Satelite</string>
    <string name="map_hibrid">Híbrido</string>
    <string name="slide_text_middle">Ações</string>
    <string name="login">Login</string>
    <string name="list_works">Listar Obras</string>
    <string name="test_email">gabrielduartemomberg@gmail.com</string>
    <string name="title_activity_maps">Map</string>
    <string name="button_cancel">Cancelar</string>
    <string name="logout">Logout</string>
    <string name="nomeObra">Nome da Obra:</string>
    <string name="interno">Interna</string>
    <string name="externo">Externa</string>
    <string name="salvar">Salvar</string>
    <string name="data">Data de início da obra:</string>
    <string name="texto_int_ext">Fases do Processo da Obra:</string>
    <string name="cancelar">Cancelar</string>
    <string name="rua">Rua:</string>
    <string name="bairro">Bairro:</string>
    <string name="cidade">Cidade:</string>
    <string name="nulo">Nulo</string>
    <string name="nome_adapter">Nome:</string>
    <string name="data_adapter">Data:</string>
    <string name="endereco_adapter">Endereço:</string>
    <string name="tipo_fase_adapter">Fase:</string>
    <string name="fase_adapter">Fase do processo:</string>
    <string name="excluir">Excluir</string>
    <string name="info">Informações</string>
    <string name="refresh">Atualizar</string>
    <string name="add">Adicionar</string>
    <string name="fase_anterior">Fase anterior:</string>
    <string name="editar">Editar</string>
    <string name="pesquisa">Pesquisa</string>
    <string name="buscar">Buscar</string>
    <string name="nomedaobra">Nome da Obra</string>
    <string name="data_button">Data</string>
</resources>
