<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/box"
    android:weightSum="1"
    android:background="@drawable/dialog"
    android:layoutMode="opticalBounds">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:id="@+id/top"
        android:layout_weight="3.75"
        android:background="#757c75">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:scaleType="center"
            android:background="@mipmap/logo_signin"
            android:contentDescription="@string/app_name"
            android:layout_weight="3.75" />

        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="username" />

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="sans-serif"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:hint="password"/>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/button_box"
        android:layout_weight="3.75"
        android:layout_below="@+id/top">

        <Button
            android:id="@+id/btn_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/login"
            android:layout_weight="3.75"
            android:layout_gravity="left" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/buttonCancel"
            android:layout_weight="3.75"
            android:clickable="true" />
    </LinearLayout>

</RelativeLayout>